--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,7 +51,8 @@
     <style name="ActionBarOverlay.Transparent" parent="@android:Widget.ActionBar">
         <item name="android:background">@null</item>
         <item name="android:displayOptions">homeAsUp|showHome|showTitle</item>
-        <item name="android:titleTextStyle">@style/ActionBarOverlay.Transparent.TitleTextStyle</item>
+        <item name="android:titleTextStyle">@style/ActionBarOverlay.Transparent.TitleTextStyle
+        </item>
     </style>
 
     <style name="ActionBarOverlay.Transparent.TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
@@ -67,6 +68,8 @@
         <item name="android:background">@color/main_color_600</item>
         <item name="android:titleTextStyle">@style/ActionBarStyle.TitleTextStyle</item>
     </style>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <!-- ActionBar related themes end here -->
 
 
