--- a/app/src/main/res/layout/activity_chat_contacts.xml
+++ b/app/src/main/res/layout/activity_chat_contacts.xml
@@ -30,6 +30,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
                     android:background="@drawable/blue_border_box"
                     android:orientation="horizontal">
 
