--- a/app/src/main/res/layout/header_navigation_drawer_social.xml
+++ b/app/src/main/res/layout/header_navigation_drawer_social.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/header_navigation_drawer_social_image"
@@ -16,14 +16,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="16dp"
         android:gravity="center_vertical"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical" >
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/image"
@@ -32,22 +33,45 @@
                 android:layout_margin="20dp" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="4dp"
-                android:gravity="center_vertical"
-                android:orientation="vertical" >
+                android:gravity="center"
+                android:orientation="vertical">
 
-                <com.connectapp.user.font.RobotoTextView
-                    android:id="@+id/tv_userName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:text=" "
-                    android:textColor="@android:color/white"
-                    android:textSize="24sp"
-                    app:typeface="robotoLight" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.connectapp.user.font.RobotoTextView
+                        android:id="@+id/tv_userName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginBottom="4dp"
+                        android:text=" "
+                        android:textColor="@android:color/white"
+                        android:textSize="24sp"
+                        app:typeface="robotoLight" />
+
+
+                    <ImageView
+                        android:id="@+id/iv_editProfile"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="13dp"
+                        android:layout_toRightOf="@id/tv_userName"
+                        android:background="@drawable/white_circle"
+                        android:padding="9dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_edit"
+                        android:tint="@color/white" />
+
+                </RelativeLayout>
+
 
                 <com.connectapp.user.font.RobotoTextView
                     android:layout_width="wrap_content"
