Update Chat Contact.

--- a/app/src/main/res/layout/row_friends.xml
+++ b/app/src/main/res/layout/row_friends.xml
@@ -46,6 +46,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Sample"
+                    android:textColor="@color/grey_dark"
                     android:textAppearance="?android:textAppearance"
                     android:textStyle="normal" />
 
