--- a/app/src/main/res/layout/activity_chat_contacts.xml
+++ b/app/src/main/res/layout/activity_chat_contacts.xml
@@ -10,12 +10,7 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -60,14 +55,13 @@
 
             </LinearLayout>
 
-        </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewContacts"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_margin="7dp"
         android:scrollbars="vertical" />
 
 </LinearLayout>
