--- a/app/src/main/res/layout/activity_chat_contacts.xml
+++ b/app/src/main/res/layout/activity_chat_contacts.xml
@@ -8,52 +8,53 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="7dp"
         android:theme="@style/AppTheme.AppBarOverlay">
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:id="@+id/ll_searchLayout"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/blue_border_box"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                <ImageButton
+                    android:id="@+id/ib_filter"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_centerInParent="true"
+                    android:layout_marginRight="13dp"
+                    android:background="@color/transparent"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_search" />
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/tv_profile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:background="@drawable/blue_border_box"
-                    android:orientation="horizontal">
-
-                    <ImageButton
-                        android:id="@+id/ib_filter"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:layout_centerInParent="true"
-                        android:layout_marginRight="13dp"
-                        android:background="@color/transparent"
-                        android:scaleType="centerInside"
-                        android:src="@drawable/ic_search" />
-
-                    <TextView
-                        android:id="@+id/tv_profile"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_gravity="right|center_vertical"
-                        android:layout_marginRight="13dp"
-                        android:text="Search Contact"
-                        android:textAppearance="?android:textAppearanceMedium"
-                        android:textColor="@color/white"
-                        android:textSize="11sp" />
-                </LinearLayout>
-
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="right|center_vertical"
+                    android:layout_marginRight="13dp"
+                    android:text="Search Contact"
+                    android:textAppearance="?android:textAppearanceMedium"
+                    android:textColor="@color/white"
+                    android:textSize="11sp" />
             </LinearLayout>
+
+        </LinearLayout>
 
     </android.support.design.widget.AppBarLayout>
 
