--- a/app/src/main/res/layout/activity_chat_main.xml
+++ b/app/src/main/res/layout/activity_chat_main.xml
@@ -5,9 +5,9 @@
     android:id="@+id/contentRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:background="@drawable/chat_bg"
     android:orientation="vertical">
-
+    <!--android:background="@color/background"-->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -17,7 +17,7 @@
             android:id="@+id/messageRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#FAF9F9"
+            android:background="@color/transparent"
             android:scrollbars="none" />
 
         <!--<View
@@ -74,7 +74,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FAF9F9"
+        android:background="@color/transparent"
         android:orientation="horizontal"
         android:weightSum="2">
 
