--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -68,7 +68,9 @@
         <item name="android:background">@color/main_color_600</item>
         <item name="android:titleTextStyle">@style/ActionBarStyle.TitleTextStyle</item>
     </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <!-- ActionBar related themes end here -->
 
@@ -184,4 +186,17 @@
         <item name="colorAccent">#f5f5f5</item>
     </style>
 
+    <style name="FullScreen.TextAppearance.Title" parent="TextAppearance.AppCompat.Title">
+        <item name="android:textColor">#1273B0</item>
+    </style>
+
+    <style name="FullScreen.TextAppearance.Title.Inverse" parent="TextAppearance.AppCompat.Title">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="AppThemeFullScreenImage" parent="Theme.Design.Light.NoActionBar">
+        <item name="colorPrimary">#1273B0</item>
+        <item name="colorPrimaryDark">#303F9F</item>
+        <item name="colorAccent">#7A8593</item>
+    </style>
 </resources>
