Remove OTS, Rath submission, school submission, Members Directory.

--- a/app/src/main/res/layout/activity_members_directory.xml
+++ b/app/src/main/res/layout/activity_members_directory.xml
@@ -4,37 +4,38 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:weightSum="2" >
-<LinearLayout 
-    android:id="@+id/llAlert"
-    android:layout_height="0dp"
-    android:layout_width="match_parent"
-    android:layout_weight="0.2">
-    <TextView
-        android:id="@+id/tv_notification_on_update"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|center_vertical"
-        android:layout_marginBottom="7dp"
-        android:layout_marginRight="7dp"
-        android:layout_marginTop="7dp"
-        android:layout_weight="0.2"
-        android:gravity="right"
-        android:padding="3dp"
-        android:text="New Update! Click here."
-        android:textColor="#ff2700"
-        android:textSize="16sp"
-        android:textStyle="italic"
-        android:visibility="gone" />
-</LinearLayout>
-    
+    android:weightSum="2">
+
+    <LinearLayout
+        android:id="@+id/llAlert"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2">
+
+        <TextView
+            android:id="@+id/tv_notification_on_update"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginBottom="7dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginTop="7dp"
+            android:layout_weight="0.2"
+            android:gravity="right"
+            android:padding="3dp"
+            android:text="New Update! Click here."
+            android:textColor="#ff2700"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:visibility="gone" />
+    </LinearLayout>
+
 
     <ListView
         android:id="@+id/lv_contact"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1.8"
-        android:padding="7dp" >
-    </ListView>
+        android:padding="7dp"></ListView>
 
 </LinearLayout>
