--- a/app/src/main/res/layout/activity_login_page_light.xml
+++ b/app/src/main/res/layout/activity_login_page_light.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/login_background"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="24dp" >
+    android:padding="24dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <com.connectapp.user.view.MaterialRippleLayout
             style="@style/RippleStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:rippleColor="@color/main_color_grey_400" >
+            app:rippleColor="@color/main_color_grey_400">
 
             <com.connectapp.user.font.RobotoTextView
                 android:id="@+id/skip"
@@ -32,7 +32,7 @@
                 android:minWidth="96dp"
                 android:text="Connecting the Last Mile..."
                 android:textColor="@color/material_deep_orange_500"
-                android:textSize="9sp"
+                android:textSize="11sp"
                 android:textStyle="italic" />
         </com.connectapp.user.view.MaterialRippleLayout>
     </LinearLayout>
@@ -41,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/logo"
@@ -52,8 +52,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="13dp"
-            android:gravity="center_vertical" >
+            android:layout_marginTop="54dp"
+            android:gravity="center_vertical">
 
             <com.connectapp.user.font.MaterialDesignIconsTextView
                 android:layout_width="wrap_content"
@@ -77,7 +77,7 @@
                 app:fletInputType="phone"
                 app:fletSingleLine="true"
                 app:fletTextBackground="@drawable/edit_text_background_accent"
-                app:fletTextColor="@color/main_color_grey_400" />
+                app:fletTextColor="@color/grey_dark" />
         </LinearLayout>
 
         <CheckBox
@@ -87,7 +87,7 @@
             android:layout_below="@+id/etPassword"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="13dp"
-            android:layout_marginTop="54dp"
+            android:layout_marginTop="21dp"
             android:button="@drawable/chkbx_selector"
             android:padding="10dp"
             android:text="Remember Me"
@@ -96,14 +96,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="13dp" >
+            android:layout_marginTop="21dp">
 
             <com.connectapp.user.view.MaterialRippleLayout
                 style="@style/RippleStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="3dp"
-                app:rippleColor="@color/main_color_grey_400" >
+                app:rippleColor="@color/main_color_grey_400">
 
                 <com.connectapp.user.font.RobotoTextView
                     android:id="@+id/login"
