--- a/app/src/main/res/menu/menu_dashboard.xml
+++ b/app/src/main/res/menu/menu_dashboard.xml
@@ -9,11 +9,11 @@
          appcompat:actionViewClass="android.support.v7.widget.SearchView"
          appcompat:showAsAction="always" />
  -->
-    <item
+   <!-- <item
         android:id="@+id/menu_chat"
         android:icon="@drawable/ic_menu_chat"
         android:title="@string/menu_chat"
-        appcompat:showAsAction="always" />
+        appcompat:showAsAction="always" />-->
     <item
         android:id="@+id/menu_edit_profile"
         android:icon="@drawable/ic_menu_profile"
