--- a/app/src/main/res/layout/activity_revenue_village.xml
+++ b/app/src/main/res/layout/activity_revenue_village.xml
@@ -2,148 +2,216 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="13dp">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
-        android:text="State"
-        android:textAppearance="?android:attr/textAppearance"
-        android:textColor="#333333"
-        android:textStyle="bold" />
+    android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/rl_header"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginTop="7dp"
-        android:background="@drawable/grey_border_box">
+        android:layout_height="60sp"
+        android:background="@drawable/blue_gradient_header"
+        android:visibility="visible">
 
         <TextView
-            android:id="@+id/dropDownActivity_state"
+            android:id="@+id/tv_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="13dp"
+            android:shadowColor="#dd000000"
+            android:shadowDx="-1"
+            android:shadowDy="-1"
+            android:shadowRadius="2"
+            android:text="Ekal Connect"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#f5f5f5"
+            android:textStyle="bold" />
+
+        <!-- <Button
+             android:id="@+id/btn_logout"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_alignParentRight="true"
+             android:layout_centerVertical="true"
+             android:layout_marginLeft="8dp"
+             android:layout_marginRight="8dp"
+             android:background="@drawable/logout_btn_selector"
+             android:onClick="onLogoutClicked"
+             android:paddingBottom="5dp"
+             android:paddingLeft="8dp"
+             android:paddingRight="5dp"
+             android:paddingTop="5dp"
+             android:shadowColor="#dd000000"
+             android:shadowDx="-1"
+             android:shadowDy="-1"
+             android:shadowRadius="2"
+             android:text="Logout"
+             android:textColor="#ffffff"
+             android:textStyle="bold" />-->
+
+        <View
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            android:background="@android:color/transparent"
-            android:clickable="true"
-            android:gravity="center_vertical"
-            android:hint="select"
-            android:paddingLeft="13dp"
-            android:paddingRight="35dp"
-            android:singleLine="true"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="#333333" />
-
-        <ImageView
-            android:layout_width="31.5dp"
-            android:layout_height="31.5dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_margin="2dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/dropdown_arrow_4"
-            android:visibility="visible" />
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:background="#9C9874" />
     </RelativeLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
-        android:text="District"
-        android:textAppearance="?android:attr/textAppearance"
-        android:textColor="#333333"
-        android:textStyle="bold" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginTop="7dp"
-        android:background="@drawable/grey_border_box">
-
-        <TextView
-            android:id="@+id/dropDownActivity_district"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            android:background="@android:color/transparent"
-            android:clickable="true"
-            android:gravity="center_vertical"
-            android:hint="select"
-            android:paddingLeft="13dp"
-            android:paddingRight="35dp"
-            android:singleLine="true"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="#333333" />
-
-        <ImageView
-            android:layout_width="31.5dp"
-            android:layout_height="31.5dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_margin="2dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/dropdown_arrow_4"
-            android:visibility="visible" />
-    </RelativeLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
-        android:text="Village Name"
-        android:textAppearance="?android:attr/textAppearance"
-        android:textColor="#333333"
-        android:textStyle="bold" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginTop="7dp"
-        android:background="@drawable/grey_border_box">
-
-
-        <EditText
-            android:id="@+id/et_village_name"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            android:background="@android:color/transparent"
-            android:gravity="center_vertical"
-            android:hint="Enter Village Name"
-            android:paddingLeft="13dp"
-            android:paddingRight="35dp"
-            android:singleLine="true"
-            android:textAppearance="?android:attr/textAppearance"
-            android:textColor="#333333" />
-    </RelativeLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="31dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="13dp">
 
-        <Button
-            android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:background="@color/main_color_500"
-            android:onClick="onPersonClick"
-            android:text="Person"
-            android:textColor="@color/white" />
+            android:layout_marginTop="21dp"
+            android:text="State"
+            android:textAppearance="?android:attr/textAppearance"
+            android:textColor="#333333"
+            android:textStyle="bold" />
 
-        <Button
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginTop="7dp"
+            android:background="@drawable/grey_border_box">
+
+            <TextView
+                android:id="@+id/dropDownActivity_state"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
+                android:clickable="true"
+                android:gravity="center_vertical"
+                android:hint="select"
+                android:paddingLeft="13dp"
+                android:paddingRight="35dp"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="#333333" />
+
+            <ImageView
+                android:layout_width="31.5dp"
+                android:layout_height="31.5dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_margin="2dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/dropdown_arrow_4"
+                android:visibility="visible" />
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:background="@color/material_green_500"
-            android:onClick="onNextClick"
-            android:text="Next"
-            android:textColor="@color/white" />
+            android:layout_marginTop="21dp"
+            android:text="District"
+            android:textAppearance="?android:attr/textAppearance"
+            android:textColor="#333333"
+            android:textStyle="bold" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginTop="7dp"
+            android:background="@drawable/grey_border_box">
+
+            <TextView
+                android:id="@+id/dropDownActivity_district"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
+                android:clickable="true"
+                android:gravity="center_vertical"
+                android:hint="select"
+                android:paddingLeft="13dp"
+                android:paddingRight="35dp"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="#333333" />
+
+            <ImageView
+                android:layout_width="31.5dp"
+                android:layout_height="31.5dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_margin="2dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/dropdown_arrow_4"
+                android:visibility="visible" />
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="21dp"
+            android:text="Village Name"
+            android:textAppearance="?android:attr/textAppearance"
+            android:textColor="#333333"
+            android:textStyle="bold" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginTop="7dp"
+            android:background="@drawable/grey_border_box">
+
+
+            <EditText
+                android:id="@+id/et_village_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
+                android:gravity="center_vertical"
+                android:hint="Enter Village Name"
+                android:paddingLeft="13dp"
+                android:paddingRight="35dp"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearance"
+                android:textColor="#333333" />
+        </RelativeLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="21dp"
+            android:weightSum="2">
+
+            <Button
+                android:id="@+id/btn_cancel"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="3dp"
+                android:layout_weight="1"
+                android:background="@drawable/blue_btn_selector"
+                android:onClick="onPersonClick"
+                android:shadowColor="#dd000000"
+                android:shadowDx="-1"
+                android:shadowDy="-1"
+                android:shadowRadius="2"
+                android:text="PERSON"
+                android:textColor="#ffffff"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btn_post"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="3dp"
+                android:layout_weight="1"
+                android:background="@drawable/green_btn_selector"
+                android:onClick="onNextClick"
+                android:shadowColor="#dd000000"
+                android:shadowDx="-1"
+                android:shadowDy="-1"
+                android:shadowRadius="2"
+                android:text="NEXT"
+                android:textColor="#ffffff"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
