--- a/app/src/main/res/layout/activity_village_form.xml
+++ b/app/src/main/res/layout/activity_village_form.xml
@@ -83,7 +83,7 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/darkblue_border_box"
                         android:hint=""
-                        android:inputType="textPostalAddress"
+                        android:inputType="textCapWords|textPersonName"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:singleLine="true"
@@ -170,7 +170,7 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/darkblue_border_box"
                         android:hint=""
-                        android:inputType="textPostalAddress"
+                        android:inputType="textCapCharacters"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:singleLine="true"
@@ -208,8 +208,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@drawable/darkblue_border_box"
+                        android:digits="012345789"
                         android:hint=""
-                        android:inputType="textPostalAddress"
+                        android:inputType="phone"
+                        android:maxLength="10"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:singleLine="true"
@@ -248,7 +250,8 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/darkblue_border_box"
                         android:hint=""
-                        android:inputType="textPostalAddress"
+                        android:imeOptions="actionDone"
+                        android:inputType="textWebEmailAddress"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:singleLine="true"
@@ -275,17 +278,37 @@
                     android:text="Date Of Birth"
                     android:textColor="#347B8F" />
 
-                <TextView
-                    android:id="@+id/tv_dob"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_marginTop="13dp"
-                    android:background="@drawable/darkblue_border_box"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="#333333" />
+                    android:background="@drawable/darkblue_border_box">
+
+                    <TextView
+                        android:id="@+id/tv_dob"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_centerVertical="true"
+                        android:background="@android:color/transparent"
+                        android:clickable="true"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="35dp"
+                        android:singleLine="true"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="#333333" />
+
+                    <ImageView
+                        android:layout_width="31.5dp"
+                        android:layout_height="31.5dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="2dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/ic_date" />
+
+                </RelativeLayout>
+
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -295,17 +318,87 @@
                     android:text="Date Of Marriage"
                     android:textColor="#347B8F" />
 
-                <TextView
-                    android:id="@+id/tv_dom"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_marginTop="13dp"
-                    android:background="@drawable/darkblue_border_box"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="#333333" />
+                    android:background="@drawable/darkblue_border_box">
+
+                    <TextView
+                        android:id="@+id/tv_dom"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_centerVertical="true"
+                        android:background="@android:color/transparent"
+                        android:clickable="true"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="35dp"
+                        android:singleLine="true"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="#333333" />
+
+                    <ImageView
+                        android:layout_width="31.5dp"
+                        android:layout_height="31.5dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="2dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/ic_date" />
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_spouse"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_marginTop="13dp"
+                        android:text="Spouse"
+                        android:textColor="#347B8F" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="35dp"
+                        android:layout_marginTop="13dp"
+                        android:background="@drawable/darkblue_border_box">
+
+                        <ImageView
+                            android:id="@+id/iv_add_spouse"
+                            android:layout_width="31.5dp"
+                            android:layout_height="31.5dp"
+                            android:layout_alignParentLeft="true"
+                            android:layout_centerVertical="true"
+                            android:layout_margin="2dp"
+                            android:onClick="onSpouseAddClick"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/ic_add_spouse" />
+
+                        <TextView
+                            android:id="@+id/tv_spouse"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@+id/iv_add_spouse"
+                            android:background="@android:color/transparent"
+                            android:clickable="true"
+                            android:gravity="center_vertical"
+                            android:paddingLeft="5dp"
+                            android:text="Spouse1, Spouse2"
+                            android:paddingRight="35dp"
+                            android:singleLine="true"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:textColor="#333333" />
+
+                    </RelativeLayout>
+                </LinearLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -376,7 +469,8 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/darkblue_border_box"
                         android:hint=""
-                        android:inputType="textPostalAddress"
+                        android:imeOptions="actionDone"
+                        android:inputType="number"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:singleLine="true"
@@ -503,6 +597,7 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/darkblue_border_box"
                         android:hint=""
+                        android:imeOptions="actionDone"
                         android:inputType="textPostalAddress"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
@@ -593,10 +688,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
-                        android:paddingRight="2dp"
-                        android:paddingLeft="2dp"
-                        android:text="+"
                         android:onClick="onAddLangClick"
+                        android:paddingLeft="2dp"
+                        android:paddingRight="2dp"
+                        android:text="+"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:textColor="#C90000"
                         android:visibility="visible" />
