Add More person, dummy string for demo in revenue village dropdown

--- a/app/src/main/res/layout/activity_chapters.xml
+++ b/app/src/main/res/layout/activity_chapters.xml
@@ -34,24 +34,21 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"
+                android:gravity="center"
                 android:orientation="vertical"
                 android:paddingBottom="@dimen/spacing_middle"
-                android:paddingLeft="@dimen/spacing_middle"
                 android:paddingTop="@dimen/spacing_middle">
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="31dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
+                    android:gravity="center"
                     android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -84,16 +81,11 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:visibility="invisible" />
-
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="7dp"
                         android:text="@string/desc_fts_mem_dir"
@@ -243,24 +235,22 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"
+                android:gravity="center"
                 android:orientation="vertical"
                 android:paddingBottom="@dimen/spacing_middle"
-                android:paddingLeft="@dimen/spacing_middle"
                 android:paddingTop="@dimen/spacing_middle">
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="31dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
+                    android:gravity="center"
                     android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -293,7 +283,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -305,6 +295,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="7dp"
+                        android:gravity="center"
                         android:text="@string/desc_shss_mem_dir"
                         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                         android:textColor="@color/material_grey_600"
